# claudemods-multi-iso-konsole-script

./: LICENSE  README.md  Release  Supported-Distros  changesc++.txt  changesc.txt  installc++.sh  notes.txt  readme.txt
.github/: FUNDING.yml
advancedbashscript/cmi+cmitui/: cmi.sh  cmitui
advancedc++script/all-in-one/: 25.10-deps.txt  archubuntudebian.cpp  main.cpp  (+4 more)
advancedc++script/all-in-one-devbranch/: archubuntudebian.cpp  main.pro
advancedcscript/: cmi.desktop  installfromdownlaods.desktop  installfromgitclone.desktop
advancedimgqt6app/: main.cpp  main.pro
advancedimgscript/: advancedimgscript.sh  main.cpp  main.pro  mkinitcpio.conf  readme.md  rsynctoimg.sh  test.cpp  test2.cpp  testing.sh
advancedimgscript+/: advancedimgscript.sh  main.cpp  mksquashfs.sh  readme.md  resources.qrc
advancedimgscript++/: main.cpp  main.pro  mksquashfs.sh  readme.md  resources.h
advancedrustscript/: Cargo.toml
advancedrustscript/cmi+cmitui/cmi/: Cargo.toml
advancedrustscript/cmi+cmitui/cmi/src/: main.rs
btrfs-and-ext4-installer/: arch-install-scripts.tar.zst  arch.cpp  btrfs-progs.pkg.tar.zst  btrfsfstabcompressed.sh  btrfsrsync.sh  device-mapper.pkg.tar.zst  dosfstools.pkg.tar.zst  gparted.pkg.tar.zst  main.pro  ncurses.pkg.tar.zst  parted.pkg.tar.zst  rsync-btrfs-ext4-install  rsync.pkg.tar.zst  rsync.sh  rsyncinstaller1partiontest.cpp
dogfooding-photos/: readme.md
guide/: readme.md  readme.txt
installer/: patch.sh
photos/: readme.md
photos-of-test/: readme.md
testing/: main.cpp
v1.06.1-old-script-files/: claudemods-iso-configurator-v1.02 copy.rb
(+119 files in other folders)
