[package]
name = "cmi"
version = "0.1.0"
edition = "2021"
authors = ["claudemods"]
license = "GPL-3.0-or-later"

[dependencies]
chrono = "0.4.41"
colored = "2.2.0"
thiserror = "1.0.69"
clap = { version = "4.5.40", features = ["derive"] }





[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
debug = false
lto = true
codegen-units = 1
